Frontend/src/landing-page/home/Home.css
    /* card */
    
    .listing-card {
        border: none;
        width: 100%;
    }
    
    .card-body {
        padding: 0;
    }
    
    .card-wrapper {
        width: 100%
    }
    
    .list-link {
        text-decoration: none;
        display: block;
        width: 100%;
    }
    
    .card-img-top {
        border-radius: 1rem;
        height: 400px;
        object-fit: cover;
        width: 100%;
    }
    
    .listing-card {
        margin-bottom: 1rem;
    }
    /* filer icons */
    
    #filters {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        padding: 10px;
    }
    
    .filter {
        text-align: center;
        margin-right: 2rem;
        opacity: 0.7;
        font-size: 0.9rem;
    }
    
    .filter p {
        margin-bottom: 0;
    }
    
    .filter:hover {
        opacity: 1;
        cursor: pointer;
    }
    
    .filter i {
        color: grey;
    }
    
    .tax-toggle {
        margin-left: auto;
        border: 1px solid grey;
        border-radius: 1rem;
        padding: 0.5rem;
        margin-top: 10px;
    }
    /* navbar */
    
    .nav-input {
        border-radius: 10rem !important;
    }
    
    .nav-btn {
        border-radius: 8rem !important;
    }
    
    .fa-magnifying-glass {
        display: inline;
        margin-right: 5px;
    }
    /* Home.jsx */
    
    .container {
        display: flex;
        flex-direction: column;
        min-height: 100vh;
    }
    
    .navbar {
        position: fixed;
        left: 0;
        top: 0;
        width: 100%;
        z-index: 100;
        height: 60px;
    }
    
    .filtericons {
        margin-top: 60px;
        padding: 10px;
    }
    
    .body {
        flex: 1;
    }

